--- a/Resources/Prototypes/_RMC14/Species/feroxi.yml
+++ b/Resources/Prototypes/_RMC14/Species/feroxi.yml
@@ -3,7 +3,7 @@
 - type: species
   id: Feroxi
   name: species-name-feroxi
-  roundStart: true
+  roundStart: false
   prototype: RMCMobFeroxi
   sprites: MobFeroxiSprites
   defaultSkinTone: "#985629"
