--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/CMB/bureau_deputy.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/CMB/bureau_deputy.yml
@@ -66,19 +66,10 @@
     head: RMCHeadCapBureau
     # face cigar
     # shoulder holster with revolver and two magazines
-    eyes: CMGlassesSecurity
-    ears: RMCHeadsetDistressBureau
-    back: CMSatchelSecurity
-    gloves: RMCHandsVeteran
-    jumpsuit: RMCJumpsuitMarshal
-    outerClothing: RMCCoatBureauDeputy # add telebaton binoculars/range
-    # /obj/item/weapon/gun/shotgun/pump/dual_tube/cmb/m3717
+    jumpsuit: AU14CMBUniform
     belt: CMBeltSecurityMarshalFilled
     shoes: RMCBootsPMCFilled
     id: RMCIDCardDeputy
-    pocket1: RMCPouchFirstAidERTFill
-    pocket2: RMCPouchMagazineLargeMP5
-    suitstorage: WeaponSMGMP5
 
 - type: playTimeTracker
   id: RMCJobBureauDeputy
