--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/corporate_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/corporate_survivor.yml
@@ -30,8 +30,6 @@
         RMCSkillEndurance: 2
         RMCSkillFireman: 1
         RMCSkillFirearms: 1
-    - type: EquipSurvivorPreset
-      preset: RMCSurvivorPresetCorporate
     - type: RMCSurvivor
     - type: MotionDetectorTracked
     - type: NpcFactionMember
@@ -43,14 +41,10 @@
 - type: startingGear
   id: RMCGearSurvivorCorporate
   equipment:
-    ears: RMCHeadsetDistressWeYaColony
-    jumpsuit: CMJumpsuitLiaisonField
-    outerClothing: RMCArmorVest
-    shoes: RMCShoesLaceup
-    back: CMSatchelFillSurvivor # TODO RMC14 secure leather satchel
-    id: CMIDCardLiaisonColony
-    pocket1: RMCPouchSurvivalFill
-    pocket2: RMCPouchDocument
+    jumpsuit: CMJumpsuitColonist
+    shoes: RMCShoesBlack
+    id: CMIDCardColonist
+    ears: CMHeadsetColony
 
 - type: entity
   parent: CMSpawnPointJobBase
