--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/engineer_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/engineer_survivor.yml
@@ -19,8 +19,6 @@
         RMCSkillConstruction: 2
         RMCSkillPowerLoader: 2
         RMCSkillVehicles: 1
-    - type: EquipSurvivorPreset
-      preset: RMCSurvivorPresetEngineer
     - type: RMCSurvivor
     - type: MotionDetectorTracked
     - type: NpcFactionMember
@@ -31,17 +29,12 @@
 - type: startingGear
   id: RMCGearSurvivorEngineer
   equipment:
-    head: RMCHardhatWhite
+    head: RMCHardhatOrange
+    jumpsuit: AU14CivilianBoilerSuitLightBlue
+    outerClothing: RMCHazardVest
+    shoes: RMCShoesBlack
+    id: CMIDCardColonist
     ears: CMHeadsetColony
-    eyes: RMCWeldingGoggles
-    jumpsuit: CMJumpsuitLiaisonBrown
-    outerClothing: RMCHazardVestYellow
-    gloves: CMHandsInsulated
-    shoes: RMCShoesJackboots
-    back: CMSatchelEngineerSurvivorFill
-    id: CMIDCardColonistEngineer
-    pocket1: RMCPouchSurvivalFill
-    pocket2: CMWelder # TODO RMC14 industrial welder
 
 - type: entity
   parent: CMSpawnPointJobBase
