--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyemergencyresponseofficer.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyemergencyresponseofficer.yml
@@ -6,6 +6,10 @@
   setPreference: true
   playTimeTracker: AU14JobCivilianEmergencyResponseOfficer
   ranks:
+    RMCRankCivilianSeniorOfficer:
+    - !type:RoleTimeRequirement
+      role: AU14JobCivilianEmergencyResponseOfficer
+      time: 1200 # 20 hours
     RMCRankCivilianOfficer: []
   startingGear: AU14GearCivilianEmergencyResponseOfficer
   icon: "CMJobIconEmpty"
