--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonycmbdeputy.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonycmbdeputy.yml
@@ -6,6 +6,10 @@
   setPreference: true
   playTimeTracker: AU14JobCivilianCMBDeputy
   ranks:
+    AU14JobCivilianCMBDeputy:
+    - !type:RoleTimeRequirement
+      role: AU14JobCivilianCMBDeputy
+      time: 1200 # 20 hours
     RMCRankCMBDeputy: []
   startingGear: AU14GearCivilianCMBDeputy
   icon: "RMCJobIconBureauDeputy"
