--- a/Resources/Prototypes/_AU14/Roles/Departments/au14_colony_department.yml
+++ b/Resources/Prototypes/_AU14/Roles/Departments/au14_colony_department.yml
@@ -9,6 +9,7 @@
   - AU14JobCivilianFoodServiceWorker
   - AU14JobCivilianJournalist
   - AU14JobCivilianEcologist
+  - AU14JobCivilianColonySynthetic
   departmentRadio: null
   headOfDepartment: null
 
