--- a/Resources/Prototypes/_RMC14/Roles/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Loadouts/role_loadouts.yml
@@ -849,3 +849,14 @@
   - FoodSweetsRMC
   - FoodPackagedRMC
   - FoodHealthyRMC
+
+- type: roleLoadout
+  id: AU14JobCivilianColonySynthetic
+  points: 7
+  groups:
+  - PaperworkRMC
+  - CannedDrinksRMC
+  - FlasksRMC
+  - FoodSweetsRMC
+  - FoodPackagedRMC
+  - FoodHealthyRMC
