casettes and disable new jobs

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/civilian_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/civilian_survivor.yml
@@ -3,6 +3,7 @@
   id: CMSurvivor
   name: cm-job-name-survivor
   description: cm-job-description-survivor
+  setPreference: false
   playTimeTracker: CMJobSurvivor
   requirements:
   - !type:DepartmentTimeRequirement
