--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/colony_synth.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/colony_synth.yml
@@ -3,6 +3,7 @@
   id: RMCJobSyntheticColony
   name: rmc-job-name-synth-colony
   description: rmc-job-description-synth-colony
+  setPreference: false
   playTimeTracker: RMCJobSyntheticColony
   ranks:
     RMCRankSyntheticColonist: []
