--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/engineer_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/engineer_survivor.yml
@@ -3,6 +3,7 @@
   id: CMSurvivorEngineer
   name: cm-job-name-survivor-engineer
   description: cm-job-description-survivor
+  setPreference: false
   playTimeTracker: CMJobSurvivorEngineer
   startingGear: RMCGearSurvivorEngineer
   accessGroups:
