--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/security_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/security_survivor.yml
@@ -3,6 +3,7 @@
   id: CMSurvivorSecurity
   name: cm-job-name-survivor-security
   description: cm-job-description-survivor
+  setPreference: false
   playTimeTracker: CMJobSurvivorSecurity
   ranks:
     RMCRankCivilianOfficer: []
