--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/survivor_co.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/survivor_co.yml
@@ -3,6 +3,7 @@
   id: RMCSurvivorCommandingOfficer
   name: rmc-job-name-survivor-co
   description: rmc-job-description-survivor-co
+  setPreference: false
   playTimeTracker: RMCJobSurvivorCO
   startingGear: CMGearCommandingOfficer
   joinNotifyCrew: false
