--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/doctor_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/doctor_survivor.yml
@@ -3,6 +3,7 @@
   id: CMSurvivorDoctor
   name: cm-job-name-survivor-doctor
   description: cm-job-description-survivor
+  setPreference: false
   playTimeTracker: CMJobSurvivorDoctor
   ranks:
     RMCRankCivilianDoctor: []
