--- a/Resources/Prototypes/_RMC14/Entities/Objects/Devices/cassettes.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Devices/cassettes.yml
@@ -35,7 +35,7 @@
   name: custom cassette
   components:
   - type: Sprite
-    state: cassette_rising_sun
+    state: cassette_gray
   - type: Item
     size: Small
   - type: CassetteTape
