--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonycivilian.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonycivilian.yml
@@ -36,7 +36,7 @@
   equipment:
     jumpsuit: CMJumpsuitColonist
     shoes: RMCShoesBlack
-    id: CMIDCardColonist
+    id: AU14IDCardColonyColonist
     ears: CMHeadsetColony
 
 - type: entity
