--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonycmbmarshal.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonycmbmarshal.yml
@@ -46,7 +46,7 @@
     jumpsuit: AU14CMBUniform
     belt: CMBeltSecurityMarshalFilled
     shoes: RMCBootsPMCFilled
-    id: RMCIDCardDeputy
+    id: AU14IDCardColonyCMBMarshal
     ears: CMHeadsetColony
 
 - type: entity
