--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonycorporateliaison.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonycorporateliaison.yml
@@ -48,7 +48,7 @@
   equipment:
     jumpsuit: AU14CivilianWorkwearBlue
     shoes: RMCShoesLaceup
-    id: CMIDCardColonist
+    id: AU14IDCardColonyCorporateLiaison
     ears: CMHeadsetColony
     outerClothing: AU14CivilianJacketOrangePufferJacket
 
