--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyecologist.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyecologist.yml
@@ -34,7 +34,7 @@
 - type: startingGear
   id: AU14GearCivilianEcologist
   equipment:
-    id: CMIDCardColonist
+    id: AU14IDCardColonyEcologist
     ears: CMHeadsetColony
     jumpsuit: AU14CivilianWorkwearGreen
     shoes: RMCShoesBlack
