--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyethicsandwellnessadvisor.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyethicsandwellnessadvisor.yml
@@ -37,7 +37,7 @@
   equipment:
     jumpsuit: AU14CivilianWorkwearPink
     shoes: RMCShoesBlack
-    id: CMIDCardColonist
+    id: AU14IDCardColonyEthicsAndWellnessAdvisor
     ears: CMHeadsetColony
     outerClothing: AU14CivilianJacketGrayPufferJacket
 
