--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyforeman.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyforeman.yml
@@ -40,10 +40,9 @@
   id: AU14GearCivilianForeman
   equipment:
     head: RMCHardhatBlue
-    jumpsuit: AU14CivilianWeYuEngineerClothes
-    outerClothing: AU14CivilianFullSuitWeYuEngineer
+    jumpsuit: AU14CivilianWeYuEngineerFormanClothes
     shoes: RMCBootsCorporate
-    id: CMIDCardColonist
+    id: AU14IDCardColonyForeman
     ears: CMHeadsetColony
 
 - type: entity
