--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonysynth.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonysynth.yml
@@ -96,7 +96,7 @@
   equipment:
     jumpsuit: RMCJumpsuitCivilian
     shoes: RMCBootsCorporate
-    id: CMIDCardColonist
+    id: AU14IDCardColonySynthetic
     ears: CMHeadsetColony
   inhand:
   - RMCSmartpackBlack
