--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyusafrecruiter.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyusafrecruiter.yml
@@ -24,8 +24,6 @@
         RMCSkillEndurance: 1
         RMCSkillVehicles: 1
         RMCSkillPowerLoader: 1
-        RMCSkillConstruction: 1
-        RMCSkillEngineer: 1
         RMCSkillFirearms: 1
         RMCSkillFireman: 1
         RMCSkillJtac: 3
@@ -42,7 +40,7 @@
   equipment:
     jumpsuit: AU14UASFFatigues
     shoes: RMCBootsCorporate
-    id: CMIDCardColonist
+    id: AU14IDCardColonyUSASFRecruiter
     ears: CMHeadsetColony
     head: AU14USASFCap
 
