--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyjournalist.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyjournalist.yml
@@ -36,7 +36,7 @@
   equipment:
     jumpsuit: CMJumpsuitLiaisonIvy
     shoes: RMCShoesBlue
-    id: CMIDCardColonist
+    id: AU14IDCardColonyJournalist
     ears: CMHeadsetColony
     outerClothing: AU14CivilianJacketTanPufferVest
 
