--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonynurse.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonynurse.yml
@@ -23,7 +23,7 @@
         RMCSkillFireman: 1
         RMCSkillVehicles: 1
         RMCSkillDomestics: 1
-        RMCSkillMedical: 3
+        RMCSkillMedical: 2
         RMCSkillSurgery: 1
     - type: JobPrefix
       prefix: au14-job-prefix-nurse
@@ -36,7 +36,7 @@
 - type: startingGear
   id: AU14GearCivilianNurse
   equipment:
-    id: CMIDCardColonist
+    id: AU14IDCardColonyNurse
     ears: CMHeadsetColony
     jumpsuit: RMCScrubsLightBlue
     shoes: RMCShoesBlack
